nohup.out
Traceback (most recent call last):
  File "run_sprinkler_test.py", line 81, in <module>
    schedule.every(2).day.at('06:30').do(job)
  File "/usr/local/lib/python2.7/dist-packages/schedule/__init__.py", line 260, in day
    assert self.interval == 1, 'Use days instead of day'
AssertionError: Use days instead of day
Traceback (most recent call last):
  File "run_sprinkler_test.py", line 81, in <module>
    schedule.every(2).day.at('06:30').do(job)
  File "/usr/local/lib/python2.7/dist-packages/schedule/__init__.py", line 260, in day
    assert self.interval == 1, 'Use days instead of day'
AssertionError: Use days instead of day
Traceback (most recent call last):
  File "run_sprinkler_test.py", line 81, in <module>
    schedule.every(2).day.at('06:30').do(job)
  File "/usr/local/lib/python2.7/dist-packages/schedule/__init__.py", line 260, in day
    assert self.interval == 1, 'Use days instead of day'
AssertionError: Use days instead of day
Traceback (most recent call last):
  File "new_sprinkler.py", line 91, in <module>
    standbyBlick(l2)
  File "new_sprinkler.py", line 46, in standbyBlick
    time.sleep(2)
KeyboardInterrupt
Traceback (most recent call last):
  File "new_sprinkler.py", line 99, in <module>
    standbyBlick(l2)
  File "new_sprinkler.py", line 56, in standbyBlick
    time.sleep(2)
KeyboardInterrupt
  File "new_sprinkler.py", line 45
    logging.info("Balcony being watered.")
                                         ^
IndentationError: unindent does not match any outer indentation level
